--- a/Projeto CSS3 Avançado 1/arredondamento.html
+++ b/Projeto CSS3 Avançado 1/arredondamento.html
@@ -11,7 +11,8 @@
 		<div class="caixa">
 			<h2>Cabeçalho</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at laoreet justo, at finibus nisi. Sed malesuada ullamcorper felis sed pellentesque. Ut eget dui mattis, volutpat dui ac, lacinia turpis.</p>
-			<p class="ultimo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at laoreet justo, at finibus nisi. Sed malesuada ullamcorper felis sed pellentesque. Ut eget dui mattis, volutpat dui ac, lacinia turpis.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer at laoreet justo, at finibus nisi. Sed malesuada ullamcorper felis sed pellentesque. Ut eget dui mattis, volutpat dui ac, lacinia turpis.</p>
+			<div class="ultimo"></div>
 		</div>
 
 
