--- a/Formulário de login responsivo/index.html
+++ b/Formulário de login responsivo/index.html
@@ -27,14 +27,14 @@
         <div class="footer">
             <span>Or connect with social media</span>
             <div class="social-fields">
-                <div class="social-fields-twitter">
+                <div class="social-field twitter">
                     <a href="#">
                         <i class="fab fa-twitter"></i>
                         Sign in with Twitter
                     </a>
                 </div>
 
-                <div class="social-fields-facebook">
+                <div class="social-field facebook">
                     <a href="#">
                         <i class="fab fa-facebook-f"></i>
                         Sign in with Facebook
